--- a/lib/generators/his_adapter/install/templates/his_adapter.yml
+++ b/lib/generators/his_adapter/install/templates/his_adapter.yml
@@ -1,12 +1,76 @@
 
 default: &default
-  adapter: soap
-#  wsdl: http://localhost:8088/NeusoftHisService.asmx?wsdl
-#  wsdl: http://localhost:88/BKCloud.asmx?wsdl
-  wsdl: http://localhost:8080/PrecompiledWeb/LisReport.asmx?wsdl
+  # available protocol: his, lis, esb, pacs, http
+
+  # 顺德妇幼
+  sdfy_his:
+    protocol: his
+    wsdl: http://localhost:8088/NeusoftHisService.asmx?wsdl
+    xml_root: Request
+    wrap_field: RequestXml
+
+  # 旧广三 his
+  gysy_his:
+    protocol: his
+    wsdl: http://localhost:88/BKCloud.asmx?wsdl
+    xml_root: req
+    wrap_field: p_strXml
+
+  # 旧广三 lis
+  gysy_lis:
+    protocol: lis
+    wsdl: http://localhost:8080/PrecompiledWeb/LisReport.asmx?wsdl
+    xml_root: "" # 这里的空字符串是必须的
+
+  # 旧广三 esb
+  gysy_esb:
+    protocol: esb
+    wsdl: http://localhost:82/ESBService.asmx?wsdl
+    xml_root: req
+    wrap_field: xmlMessage
+    app_code: APP_WeChat
+    password: F80oC4Qk
+    version: 1
+    message_category:
+      get_pathology_report_list: Pathology_GetReportList # 获取病理报告列表
+      get_pathology_report_image: Pathology_GetReportImage # 获取病理报告图片
+      get_endoscpy_report_list: Endoscpy_GetReportList
+      get_endoscpy_report_item: Endoscpy_GetReportItem
+      get_endoscpy_report_image: Endoscpy_GetReportImage
+
+  # 新广三
+  new_gysy_esb:
+    wsdl: http://localhost:6002/Esbservice.asmx?wsdl
+    protocol: esb
+    xml_root: Request
+    wrap_field: xmlMessage
+    app_code: APP_WeChatOA
+    password: FPs9oqUbCZwCCQfz
+    version: 1
+    message_category:
+      get_server_time: HIS_GetServerTime
+      get_register_departments:
+
+  # 广三旧院区 pacs
+  gysy_pacs:
+    protocol: pacs
+    wsdl: http://localhost:8081/wsdl/IPacsServices
+
+  # 金沙洲 his
+  jsz_his:
+    protocol: his
+    wsdl: http://localhost:8081/service/service.asmx?wsdl
+    xml_root: Request
+    wrap_field: strXml
+
+  jsz_http:
+    protocol: http
+    base_url: http://localhost:8086/sqwebserver.asmx
 
   api:
-    get_patients_info: :get_patients_info
+#    get_patients_info: :get_patients_info
+    get_server_time: :call_esb
+    get_patients_info: :invoke # 金沙洲
     get_provinces: :dx_get_province  # 获取省份列表
     get_cities: :dx_get_city # 获取城市列表
     get_districts: :dx_get_district # 获取区列表
@@ -16,9 +80,11 @@ default: &default
     edit_medical_card: :dx_edit_patient18 # 修改诊疗卡信息
     check_real-name_auth: :dx_check_idenno_new # 验证是否实名
 #    get_registerable_departments: :dx_get_reg_dept_list # 获取挂号科室列表
-    get_registerable_departments: :bk_cloud_get_dept_info # 获取挂号科室列表
+#    get_registerable_departments: :bk_cloud_get_dept_info # 获取挂号科室列表
+    get_registerable_departments: :invoke # 获取挂号科室列表
+
     get_registerable_doctors: :dx_get_reg_doc_list # 获取挂号医生列表
-    get_registerable_doctor_schedule: :dx_getsplit_list # 获取挂号医生排班信息
+    get_registerable_doctors_schedule: :dx_getsplit_list # 获取挂号医生排班信息
     get_register_fee: :dx_get_reg_amt # 获取挂号费用
     register: :dx_save_reg_info18 # 挂号
     get_register_info: :dx_get_reg_info # 获取挂号详情
@@ -34,9 +100,42 @@ default: &default
     get_prescription_detail: :dx_get_clin_recipes_detail # 获取处方明细
     prepay: :dx_clin_pay_prepare18 # 预结算
     pay: :dx_clin_pay_finish18 # 完成支付
+    get_report_list: :get_report_list
+    get_exam_detail: :get_exam_detail
+    download_report: :download_report2
+    pending_pay: :interface_trade_jkzl
+
+    # 金沙洲 http 这里的 Interface_Trade_Jkzl 是区分大小写的
+#    network_test: :Interface_Trade_Jkzl
+    network_test: :invoke
+
+    # 获取病理报告列表 wsb
+    get_pathology_report_list: :call_esb
+
+    # 获取病理报告图片 wsb
+    get_pathology_report_image: :call_esb
+
+    # 获取内镜报告列表
+    get_endoscpy_report_list: :call_esb
+
+    # 获取内镜报告项目信息
+    get_endoscpy_report_item: :call_esb
+
+    # 获取内镜报告图片
+    get_endoscpy_report_image: :call_esb
 
   dict:
     common:
+      request:
+        transaction_code: TranCode # 金沙洲
+        auth_key: AuthKey
+        transaction_id: TransactionID
+        device_id: DeviceID
+        hospital_id: HospitalID
+        user_id: UserID
+        card_type: CardType
+        card_num: CardNum
+        is_child: isChild
       response:
 #        result_code: ResultCode
         ErrorMsg: error_msg
@@ -46,44 +145,98 @@ default: &default
         resultCode: result_code
         ResultCode: result_code
         resultDesc: result_desc
-    get_patients_info:
+    network_test: # 金沙洲
       request:
-        patient_name: pat_name
-        patient_hospital_no: pat_hospital_no
-        patient_bar_code: pat_bar_code
-        client_type: clientType
-      response:
+        transaction_code: TranCode
+        transaction_id: TransactionID
+        auth_key: AuthKey
+        user_id: UserID
+        device_id: DeviceID
+        hospital_id: HospitalID
+    get_patient_info: # 金沙洲
+      request:
+
+
+    pending_pay:
+      request:
+        disp_or_resi: DispOrResi
+        id_card_no: IDCardNo
+        clinic_card: ClinicCard
+        doctor_code: DoctorCode
+        dept_code: DeptCode
+        diag_date: DiagDate
+        reg_no: RegNo
+    get_report_list:
+      request:
+        card_no: cardNo
+        card_type: cardType
+        begin_date: beginDate
+        end_date: endDate
+    get_endoscpy_report_list:
+      request:
+        card_no: cardNo
+        card_type: cardType
+        begin_date: beginDate
+        end_date: endDate
+    get_endoscpy_report_image:
+      request:
+        item_id: itemId
+    download_report:
+      request:
+        patient_id: pat_id
+#    get_patients_info:
+#      request:
+#        patient_name: pat_name
+#        patient_hospital_no: pat_in_no
+#        patient_bar_code: pat_bar_code
+#        client_type: clientType
+#      response:
+#        pat_id: id
+#        pat_date: date
+#        pat_send_date: send_date
+#        pat_sam_id: sam_id
+#        pat_sam_name: sam_name
+#        pat_name: name
+#        pat_sex: gender
+#        pat_age: age
+#        pat_diag: diag
+#        pat_itr_id: itr_id
+#        pat_dep_name: dep_name
+#        pat_occ_date: occ_date
     get_registerable_departments:
       request:
-        data: date
+        date: date
         hospital_id: hospitalId
         dept_id: deptId
       response:
         loc: location
         descript: description
-        dept_list: list
+        dept_list: data
+        dept_info: list
+        dept_id: id
+        dept_name: name
     get_provinces:
       response:
-        province_code: code
-        province_name: name
+        PROVINCE_CODE: code
+        PROVINCE_NAME: name
     get_cities:
       request:
         province_code: PROVINCE_CODE
       response:
-        city_code: code
-        city_name: name
+        CITY_CODE: code
+        CITY_NAME: name
     get_districts:
       request:
         city_code: CITY_CODE
       response:
-        district_code: code
-        district_name: name
+        DISTRICT_CODE: code
+        DISTRICT_NAME: name
     get_towns:
       request:
         district_code: DISTRICT_CODE
       response:
-        town_code: code
-        town_name: name
+        TOWN_CODE: code
+        TOWN_NAME: name
     create_medical_card:
       request:
         name: PatientName
@@ -108,22 +261,6 @@ default: &default
         guardian_name: JHRXM
         guardian_phone_no: JHRDH
         guardian_id_card_no: JHRSFZH
-
-        PatientName: name
-        Sex: gender
-        Birthday: birthday
-        Address: address
-        Nation: nation
-        Phone: phone_no
-        CardNo: card_no
-        IDCard: id_card_no
-        MachineId: machine_id
-        PROVINCE_CODE: province_code
-        PROVINCE_NAME: province_name
-        CITY_CODE: city_code
-        CITY_NAME: city_name
-        RIGION_CODE: district_code
-        REGION_NAME: district_name
       response:
         hospatid: hospital_id
         clinno: outpatient_no
@@ -158,12 +295,25 @@ default: &default
         registered_at: regtime
         wait_no: waitno
         state: state
-    get_bookable_departments:
-      response:
+
+        flowno: serial_number
+        hospatid: hospital_id
+        clinno: outpatient_no
+        cardno: card_no
+        idcard: id_card_no
+        scheduleid: schedule_id
         deptid: department_id
         deptname: department_name
-        top_dept_code: top_department_code
-        top_dept_name: top_department_name
+        docid: doctor_id
+        docname: doctor_name
+        subjectid: subject_id
+        subjectname: subject_name
+    get_bookable_departments:
+      response:
+        department_id: deptid
+        department_name: deptname
+        top_department_code: top_dept_code
+        top_department_name: top_dept_name
         sort_id: sort_id
     pay:
       request:
