响应添加返回 code 方法

--- a/spec/dummy/config/his_adapter.yml
+++ b/spec/dummy/config/his_adapter.yml
@@ -95,7 +95,7 @@ default: &default
         ErrorMsg: error_msg
         Result: code # 金沙洲的 Result 其实是 code
         # Result: result
-        Response: response
+        Response: result
         res: response
         ResultCode: code
         ResultMessage: msg
